--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,61 +1,41 @@
-<!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
-  text-align: center;
-  font-family: arial;
-}
-
-.title {
-  color: grey;
-  font-size: 18px;
-}
-
-button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-
-a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
-}
-
-button:hover, a:hover {
-  opacity: 0.7;
-}
-</style>
-</head>
-<body>
-
-<h2 style="text-align:center">User Profile Card</h2>
-
-<div class="card">
-  <h1>John Doe</h1>
-  <p class="title">CEO & Founder, Example</p>
-  <p>Harvard University</p>
-  <div style="margin: 24px 0;">
-    <a href="#"><i class="fa fa-dribbble"></i></a> 
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="#"><i class="fa fa-facebook"></i></a> 
+<div class="wrapper bg-danger">
+  <div class="container">
+    <div class="row h-100 justify-content-between align-items-center">
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="text-center">
+          <h1 class="mt-5">Welcome To The Deink Of Love</h1>
+          <p>ยินดีต้อนรับเข้าสู่ร้านอาหาร
+            Tne Deink Of Love
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
-  <p><button>Contact</button></p>
 </div>
 
-</body>
-</html>
+
+
+
+
+
+
+<!-- <section class="wrapper fixed-top">
+  <div class="overlays"></div>
+  <div class="container h-100">
+    <div class="row h-100 justify-content-between align-items-center">
+      <div class="col-lg-12">
+        <div class="text-center">
+          <h1 class="mt-5">Welcome To The Deink Of Love</h1>
+          <p>ยินดีต้อนรับเข้าสู่ร้านอาหาร
+            Tne Deink Of Love
+          </p>
+          <button class="btn btn-success btn-outline  mt-5">จองโต๊ะ</button>
+
+
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+</section> -->
