--- a/src/app/modules/home/login/login.component.css
+++ b/src/app/modules/home/login/login.component.css
@@ -1,8 +1,8 @@
-body {
+#login {
   margin: 0;
   padding: 0;
   background-color: #17a2b8;
-  height: 100vh;
+  min-height: 551px;
 }
 #login .container #login-row #login-column #login-box {
   margin-top: 120px;
