--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,7 @@
 
     </div>
   </nav>
+  
 
   <!-- content -->
   <div role="main">
@@ -86,23 +87,31 @@
         </ul>
       </div>
     </header>
-    <nav class="navbar navbar-expand-lg sticky-top text-center" id="up" style="background-color: #757377;">
+    <nav class="navbar navbar-expand-lg sticky-top text-center" id="up" style="background-color: #fe7700d4;">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="home">หน้าแรก <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">บรรยกาศร้าน</a>
+            <a class="nav-link" href="admin/table">จัดการข้อมูลโต๊ะ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="admin/manage">จัดการข้อมูลอาหาร</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">เมนู</a>
+            <a class="nav-link" href="admin/customer">จัดการข้อมูลลูกค้า</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">เกี่ยวกับเรา</a>
+            <a class="nav-link" href="admin/booking">ข้อมูลจอง</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="admin/report">รายงานยอดขาย</a>
           </li>
         </ul>
+        
+      
 
 
       </div>
