--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -5,7 +5,7 @@
         <div class="text-center">
           <h1 class="mt-5">Welcome To The Deink Of Love</h1>
           <p>ยินดีต้อนรับเข้าสู่ร้านอาหาร
-            Tne Deink Of Love
+            The Deink Of Love
           </p>
         </div>
       </div>
